# microdot

./: .gitignore  Cargo.toml  README.md  index.html
example/dotli/: Cargo.toml  index.html  paseo-lightsync.json
example/dotli/src/: lib.rs  polkadot.rs  state.rs
microdot-browser/: Cargo.toml
microdot-browser/src/: lib.rs
microdot-core/: Cargo.toml
microdot-core/src/: discovery.rs  lib.rs  traits.rs
pkg/: README.md  package.json  paseo_revive_dotli_web_discovery.d.ts  paseo_revive_dotli_web_discovery.js  paseo_revive_dotli_web_discovery_bg.wasm  paseo_revive_dotli_web_discovery_bg.wasm.d.ts
src/: discovery.rs  kad.rs  lib.rs  peer_pool.rs  request.rs  state.rs  traits.rs
